--- a/index.html
+++ b/index.html
@@ -56,26 +56,26 @@
 
 		<div class="col-1">	
 			<div class="size grey">D</div>
-			<div class="size black"><img src="img/king_black.png" alt=""></div>
+			<div class="size black"><img src="img/queen_black.png" alt=""></div>
 			<div class="size white"><img src="img/pawn_black.png" alt=""></div>
 			<div class="size black"></div>
 			<div class="size white"></div>
 			<div class="size black"></div>
 			<div class="size white"></div>
 			<div class="size black"><img src="img/pawn_white.png" alt=""></div>
-			<div class="size white"><img src="img/king_white.png" alt=""></div>
+			<div class="size white"><img src="img/queen_white.png" alt=""></div>
 		</div>
 		
 		<div class="col-1">	
 			<div class="size grey">E</div>
-			<div class="size white"><img src="img/queen_black.png" alt=""></div>
+			<div class="size white"><img src="img/king_black.png" alt=""></div>
 			<div class="size black"><img src="img/pawn_black.png" alt=""></div>
 			<div class="size white"></div>
 			<div class="size black"></div>
 			<div class="size white"></div>
 			<div class="size black"></div>
 			<div class="size white"><img src="img/pawn_white.png" alt=""></div>	
-			<div class="size black"><img src="img/queen_white.png" alt=""></div>
+			<div class="size black"><img src="img/king_white.png" alt=""></div>
 		</div>
 
 		<div class="col-1">	
